force-app/main/default/objects/et4ae5__SupportRequest__c/et4ae5__SupportRequest__c.object-meta.xml
<CustomObject>
    <label>Support Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Support Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>