force-app/main/default/objects/et4ae5__SupportRequest__c/fields/et4ae5__Comment__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>