force-app/main/default/objects/et4ae5__SupportRequest__c/fields/et4ae5__RequestEmail__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__RequestEmail__c</fullName>
    <formula>CreatedBy.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestEmail</label>
    <type>Text</type>
</CustomField>