force-app/main/default/objects/et4ae5__SupportRequest__c/fields/et4ae5__RequestPhone__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__RequestPhone__c</fullName>
    <formula>CreatedBy.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestPhone</label>
    <type>Text</type>
</CustomField>