force-app/main/default/objects/et4ae5__SupportRequest__c/fields/et4ae5__Send_Definition__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Send_Definition__c</fullName>
    <label>Send Definition</label>
    <referenceTo>et4ae5__SendDefinition__c</referenceTo>
    <relationshipLabel>Support Requests</relationshipLabel>
    <relationshipName>Support_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>