force-app/main/default/objects/et4ae5__SupportRequest__c/fields/et4ae5__Support_Ticket_Recipient__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Support_Ticket_Recipient__c</fullName>
    <description>The email address to send support tickets to.</description>
    <label>Support Ticket Recipient</label>
    <type>Email</type>
</CustomField>